Fixed some spacing

--- a/styles/mobiledevices.css
+++ b/styles/mobiledevices.css
@@ -279,14 +279,12 @@ div .SummaryOfProject{
 
 .defaultbutton input {
   font-size: 1.5rem;
-  /*margin-top: 50px;*/
   width: 189px;
   height: 44px;
 }
 
 .defaultbutton input:hover{
   font-size: 1.5rem;
-  /*margin-top: 50px;*/
   width: 189px;
   height: 44px;
 }
@@ -463,6 +461,7 @@ div.MobileBoarding{
 }
 
 div.MobileDashboard{
+  margin-bottom: 50px;
   float: none;
   margin-top: 50px;
   width: 100%;
@@ -568,7 +567,7 @@ div .researchIntro{
 /*Responsive Competitive Analysis section-Archia--*/
 .competitivewrap, .personaswrap{
   display: inline-block;
-  margin-top: 50px;
+  margin-top: -25px;
 }
 
 div.CompAnalysis{
@@ -775,6 +774,8 @@ div .userstories{
   padding-left: 33px;
   padding-right: 33px;
   padding-top: 0;
+  padding-bottom: 0;
+
 }
 
 div .HighTasks, div .lowandmedtasks{
